Update privacy policy

--- a/app/src/main/assets/ZipUtility3_Privacy_EN.htm
+++ b/app/src/main/assets/ZipUtility3_Privacy_EN.htm
@@ -287,7 +287,7 @@ ul
 
 <div class=WordSection1 style='layout-grid:18.0pt'>
 
-<p class=MsoToc1>Privacy Policy</p>
+<p class=MsoToc1>Table of Contents</p>
 
 <p class=MsoToc1><a href="#_Toc51664877">1.Send recorded data from the app<span
 style='color:windowtext;display:none;text-decoration:none'>. </span><span
@@ -374,11 +374,6 @@ src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt 
 </span></span>System setting value<span lang=JA style='font-family:"ÇlÇr ñæí©","serif"'>Åi</span>Battery
 optimization, Storage information<span lang=JA style='font-family:"ÇlÇr ñæí©","serif"'>Åj</span></p>
 
-<p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
-style='font-family:Symbol'><img width=11 height=11
-src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>App setting value</p>
-
 <p class=MsoNormal>&nbsp;</p>
 
 <h2 style='margin-top:18.0pt'><a name="_Toc51664880">2.2 Use of the data sent
@@ -394,30 +389,38 @@ anyone other than the developer.</span></u></b></p>
 
 <p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664882">3.1.Photos/Media/Files</a></p>
 
-<p class=MsoNormal>-read the contents of your USB storage</p>
+<p class=MsoListParagraph style='margin-left:18.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>Åhread the contents of your USB storageÅh, Ågmodify or delete the
+contents of your USB storageÅh</p>
 
-<p class=MsoNormal>-modify or delete the contents of your USB storage</p>
-
-<p class=MsoNormal>Used to create, rename, and delete files and directories in
-internal/external storage.</p>
+<p class=MsoNormal style='margin-left:18.0pt'>Used to create, rename, and
+delete files and directories in internal/external storage.</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
 <p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664883">3.2.Storage</a></p>
 
-<p class=MsoNormal>-read the contents of your USB storage</p>
+<p class=MsoListParagraph style='margin-left:18.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>Åhread the contents of your USB storageÅh, Ågmodify or delete the
+contents of your USB storageÅh</p>
 
-<p class=MsoNormal>-modify or delete the contents of your USB storage</p>
-
-<p class=MsoNormal>Used to create, rename, and delete files and directories in internal/external
-storage.</p>
+<p class=MsoNormal style='margin-left:18.0pt'>Used to create, rename, and
+delete files and directories in internal/external storage.</p>
 
 <p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664884">3.3.Others</a></p>
 
-<p class=MsoNormal>-prevent device from sleeping</p>
+<p class=MsoListParagraph style='margin-left:18.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>prevent device from sleeping</p>
 
-<p class=MsoNormal>Used to ensure that the process is not interrupted when the
-app transitions to the background while the file is being processed.</p>
+<p class=MsoNormal style='margin-left:18.0pt'>Used to ensure that the process
+is not interrupted when the app transitions to the background while the file is
+being processed.</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
