--- a/app/src/main/assets/ZipUtility3_Privacy_FR.htm
+++ b/app/src/main/assets/ZipUtility3_Privacy_FR.htm
@@ -20,8 +20,8 @@
 	{font-family:Century;
 	panose-1:2 4 6 4 5 5 5 2 3 4;}
 @font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
+	{font-family:Century;
+	panose-1:2 4 6 4 5 5 5 2 3 4;}
 @font-face
 	{font-family:"MS UI Gothic";
 	panose-1:2 11 6 0 7 2 5 8 2 4;}
@@ -290,7 +290,7 @@ ul
 
 <div class=WordSection1 style='layout-grid:18.0pt'>
 
-<p class=MsoToc1>Politique de confidentialit&eacute;</p>
+<p class=MsoToc1>Table des mati&egrave;res</p>
 
 <p class=MsoToc1><a href="#_Toc51664856">1. Envoi de donn&eacute;es &agrave; partir de
 l'application<span style='color:windowtext;display:none;text-decoration:none'>.. </span><span
@@ -386,11 +386,6 @@ src="ZipUtility3_Privacy_FR.files/image001.png" alt="*"><span style='font:7.0pt 
 </span></span>valeur fix&eacute;e par le syst&egrave;me<span lang=JA style='font-family:"ÇlÇr ñæí©","serif"'>Åi</span>Battery
 optimization, Storage information<span lang=JA style='font-family:"ÇlÇr ñæí©","serif"'>Åj</span></p>
 
-<p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
-style='font-family:Symbol'><img width=11 height=11
-src="ZipUtility3_Privacy_FR.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>valeur de r&eacute;glage de la demande</p>
-
 <p class=MsoNormal>&nbsp;</p>
 
 <h2 style='margin-top:18.0pt'><a name="_Toc51664859">2.2 Utilisation des
@@ -408,32 +403,40 @@ d&eacute;veloppeur.</span></u></b></p>
 <p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664861">3.1. Photos,
 m&eacute;dias et fichiers</a></p>
 
-<p class=MsoNormal>-access USB storage filesystem</p>
+<p class=MsoListParagraph style='margin-left:18.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Privacy_FR.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>Åhread the contents of your USB storageÅh, Ågmodify or delete the
+contents of your USB storageÅh</p>
 
-<p class=MsoNormal>-read the contents of your USB storage</p>
-
-<p class=MsoNormal>-modify or delete the contents of your USB storage</p>
-
-<p class=MsoNormal>Il est utilis&eacute; pour cr&eacute;er, renommer et supprimer des
-fichiers et des r&eacute;pertoires pour le stockage interne et externe.</p>
+<p class=MsoNormal style='margin-left:18.0pt'>Il est utilis&eacute; pour cr&eacute;er,
+renommer et supprimer des fichiers et des r&eacute;pertoires pour le stockage interne
+et externe.</p>
 
 <p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664862">3.2.
 stockage</a></p>
 
-<p class=MsoNormal>-read the contents of your USB storage</p>
+<p class=MsoListParagraph style='margin-left:18.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Privacy_FR.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>Åhread the contents of your USB storageÅh, Ågmodify or delete the
+contents of your USB storageÅh</p>
 
-<p class=MsoNormal>-modify or delete the contents of your USB storage</p>
-
-<p class=MsoNormal>Il est utilis&eacute; pour cr&eacute;er, renommer et supprimer des
-fichiers et des r&eacute;pertoires pour le stockage interne et externe.</p>
+<p class=MsoNormal style='margin-left:18.0pt'>Il est utilis&eacute; pour cr&eacute;er,
+renommer et supprimer des fichiers et des r&eacute;pertoires pour le stockage interne
+et externe.</p>
 
 <p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664863">3.3. les
 autres</a></p>
 
-<p class=MsoNormal>-prevent device from sleeping</p>
+<p class=MsoListParagraph style='margin-left:18.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Privacy_FR.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>prevent device from sleeping</p>
 
-<p class=MsoNormal>Utilis&eacute; pour s'assurer que le processus n'est pas interrompu
-lorsque l'application passe en arri&egrave;re-plan pendant le traitement du fichier.</p>
+<p class=MsoNormal style='margin-left:18.0pt'>Utilis&eacute; pour s'assurer que le
+processus n'est pas interrompu lorsque l'application passe en arri&egrave;re-plan
+pendant le traitement du fichier.</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
