--- a/app/src/main/assets/ZipUtility3_Privacy_JA.htm
+++ b/app/src/main/assets/ZipUtility3_Privacy_JA.htm
@@ -290,7 +290,7 @@ ul
 
 <div class=WordSection1 style='layout-grid:18.0pt'>
 
-<p class=MsoToc1><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>プライバシーポリシー</span></p>
+<p class=MsoToc1><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>目次</span></p>
 
 <p class=MsoToc1><a href="#_Toc51664847">1.<span lang=JA style='font-family:
 "ＭＳ 明朝","serif"'>アプリからのデータ送信</span><span style='color:windowtext;display:none;
@@ -381,11 +381,6 @@ src="ZipUtility3_Privacy_JA.files/image001.png" alt="*"><span style='font:7.0pt 
 </span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>システム設定値（</span>Battery
 optimization, Storage information<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>）</span></p>
 
-<p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
-style='font-family:Symbol'><img width=11 height=11
-src="ZipUtility3_Privacy_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリ設定値</span></p>
-
 <h2 style='margin-top:18.0pt'><a name="_Toc51664850">2.2</a><span lang=JA
 style='font-family:"ＭＳ ゴシック"'>アプリ開発者に送られたデータの使用</span></h2>
 
@@ -404,29 +399,37 @@ style='font-family:"ＭＳ 明朝","serif"'>必要な権限</span></h1>
 <p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664852">3.1.</a><span
 lang=JA style='font-family:"ＭＳ ゴシック"'>写真、メディア、ファイル</span></p>
 
-<p class=MsoNormal>-access USB storage filesystem</p>
+<p class=MsoListParagraph style='margin-left:18.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Privacy_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>”read the contents of your USB storage”, “modify or delete the
+contents of your USB storage”</p>
 
-<p class=MsoNormal>-read the contents of your USB storage</p>
-
-<p class=MsoNormal>-modify or delete the contents of your USB storage</p>
-
-<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>内部ストレージと外部ストレージのファイルとディレクトリーの作成・改名・削除で使用します。</span></p>
+<p class=MsoNormal style='margin-left:18.0pt'><span lang=JA style='font-family:
+"ＭＳ 明朝","serif"'>内部ストレージと外部ストレージのファイルとディレクトリーの作成・改名・削除で使用します。</span></p>
 
 <p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664853">3.2.</a><span
 lang=JA style='font-family:"ＭＳ ゴシック"'>ストレージ</span></p>
 
-<p class=MsoNormal>-read the contents of your USB storage</p>
+<p class=MsoListParagraph style='margin-left:18.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Privacy_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>”read the contents of your USB storage”, “modify or delete the
+contents of your USB storage”</p>
 
-<p class=MsoNormal>-modify or delete the contents of your USB storage</p>
-
-<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>内部ストレージと外部ストレージのファイルとディレクトリーの作成・改名・削除で使用します。</span></p>
+<p class=MsoNormal style='margin-left:18.0pt'><span lang=JA style='font-family:
+"ＭＳ 明朝","serif"'>内部ストレージと外部ストレージのファイルとディレクトリーの作成・改名・削除で使用します。</span></p>
 
 <p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664854">3.3.</a><span
 lang=JA style='font-family:"ＭＳ ゴシック"'>その他</span></p>
 
-<p class=MsoNormal>-prevent device from sleeping</p>
+<p class=MsoListParagraph style='margin-left:18.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Privacy_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>prevent device from sleeping</p>
 
-<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリがファイルの処理中にバックグラウンドに遷移した時に処理が中断されないように使用します。</span></p>
+<p class=MsoNormal style='margin-left:18.0pt'><span lang=JA style='font-family:
+"ＭＳ 明朝","serif"'>アプリがファイルの処理中にバックグラウンドに遷移した時に処理が中断されないように使用します。</span></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
