--- a/app/src/main/assets/ZipUtility3_Change_EN.htm
+++ b/app/src/main/assets/ZipUtility3_Change_EN.htm
@@ -340,6 +340,19 @@ name="_Toc386446736">Change history</a></h1>
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>2020/09/30 1.28</p>
+
+<p class=MsoListParagraph align=left style='margin-left:35.45pt;text-align:
+left;text-indent:-14.45pt'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Fixed a
+bug in Android 11 that prevented file information from being passed<span
+lang=JA style='font-family:"ÇlÇr ñæí©","serif"'>Å@</span>properly when launching
+external applications.</p>
+
+<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
+text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2020/09/23 1.27</p>
 
 <p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
@@ -414,8 +427,8 @@ text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2020/06/06 1.21</p>
 
-<p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
-left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
+<p class=MsoListParagraph align=left style='margin-left:35.45pt;text-align:
+left;text-indent:-14.15pt'><span style='font-family:Symbol'><img width=11
 height=11 src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Changed
 the last modified time of the file to be the same as the zip file when it is
@@ -485,8 +498,8 @@ src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
 left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
 height=11 src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>The
-message displayed when the read file is not a ZIP file has been corrected</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>The message
+displayed when the read file is not a ZIP file has been corrected</p>
 
 <p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
 left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
