Update short description

--- a/app/src/main/assets/ZipUtility3_Desc_EN_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_EN_Short.htm
@@ -473,8 +473,8 @@ alt="context_button_rename"><span class=1105pt>&nbsp;Rename the selected item.</
 <p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
 id="} 7" src="ZipUtility3_Desc_EN_Short.files/image007.png"
-alt="context_button_paste"><span class=1105pt>&nbsp;Paste a copy or clipped
-item (the clipped item will be deleted when the pasting is complete)</span></span></p>
+alt="context_button_paste"><span class=1105pt>&nbsp;Paste a copy or cut item
+(the cut item will be deleted when the pasting is complete)</span></span></p>
 
 <p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span style='font-size:10.5pt'><img width=19 height=19
