--- a/app/src/main/assets/ZipUtility3_Change_EN.html
+++ b/app/src/main/assets/ZipUtility3_Change_EN.html
@@ -3,7 +3,12 @@
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
 <title>ZipUtility3_Change_EN</title></head>
-<body><h3>2020/09/30 1.28</h3>
+<body><h3>2020/12/12 1.29</h3>
+<ul>
+<li>Fixed a bug that caused the app to crash while loading files.</li>
+
+</ul>
+<h3>2020/09/30 1.28</h3>
 <ul>
 <li>Fixed a bug in Android 11 that prevented file information from being passed　properly when launching external applications.</li>
 
