--- a/app/src/main/assets/ZipUtility3_Change_JA.html
+++ b/app/src/main/assets/ZipUtility3_Change_JA.html
@@ -3,7 +3,12 @@
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
 <title>ZipUtility3_Change_JA</title></head>
-<body><h3>2020/09/30 1.28</h3>
+<body><h3>2020/12/12 1.29</h3>
+<ul>
+<li>ファイル読み込み中にアプリがクラッシュするバグを解決</li>
+
+</ul>
+<h3>2020/09/30 1.28</h3>
 <ul>
 <li>Android 11で外部アプリ起動時にファイル情報が正しく渡されないバグを解決</li>
 
