--- a/app/src/main/assets/ZipUtility3_Change_JA.html
+++ b/app/src/main/assets/ZipUtility3_Change_JA.html
@@ -3,7 +3,12 @@
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
 <title>ZipUtility3_Change_JA</title></head>
-<body><h3>2020/12/12 1.29</h3>
+<body><h3>2021/01/09 1.30</h3>
+<ul>
+<li>アプリのクラッシュを回避</li>
+
+</ul>
+<h3>2020/12/12 1.29</h3>
 <ul>
 <li>ファイル読み込み中にアプリがクラッシュするバグを解決</li>
 
