Update help file

--- a/app/src/main/assets/ZipUtility3_Change_EN.html
+++ b/app/src/main/assets/ZipUtility3_Change_EN.html
@@ -3,7 +3,13 @@
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
 <title>ZipUtility3_Change_EN</title></head>
-<body><h3>2021/01/09 1.30</h3>
+<body><h3>2021/xx/xx 1.31</h3>
+<ul>
+<li>File display reordering can now be carried over from previous launch in settings.  </li>
+<li>Fixed a bug where file renaming/deleting was not reflected in the media store.  </li>
+
+</ul>
+<h3>2021/01/09 1.30</h3>
 <ul>
 <li>Prevent app crash</li>
 
