--- a/app/src/main/assets/ZipUtility3_Change_JA.html
+++ b/app/src/main/assets/ZipUtility3_Change_JA.html
@@ -3,7 +3,13 @@
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
 <title>ZipUtility3_Change_JA</title></head>
-<body><h3>2021/01/09 1.30</h3>
+<body><h3>2021/xx/xx 1.31</h3>
+<ul>
+<li>ファイル表示の並び替えを設定で前回から引き継げるようにした  </li>
+<li>ファイルの改名・削除時にメディアストアに反映されないバグを解決</li>
+
+</ul>
+<h3>2021/01/09 1.30</h3>
 <ul>
 <li>アプリのクラッシュを回避</li>
 
